--- a/snap_poll/pubspec.yaml
+++ b/snap_poll/pubspec.yaml
@@ -86,6 +86,7 @@ dependencies:
   js: ^0.7.1
   sleek_circular_slider: ^2.0.1
   firebase_storage: ^12.0.1
+  supabase_flutter: ^2.8.4
 
 dependency_overrides:
   js: ^0.7.1
